--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ a {
 	text-decoration: none !important;
 }
 body .bg-success {
-    background-color: #ff3232!important;
+    background-color: #fc0b0b!important;
 }
 .profile img {
     width: 100px;
